log
Tue 23 Apr 2024 11:09:52 AM UTC: 
 tests:  0|6
total_score: 0/70
e9a25ee
Tue 23 Apr 2024 03:20:23 PM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  0|0
8a761b2
Tue 23 Apr 2024 03:20:54 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
8f3ec23
Tue 23 Apr 2024 03:27:55 PM UTC: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|0
acb28fb
Tue 23 Apr 2024 03:28:30 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
92acc9e
Tue 23 Apr 2024 03:29:24 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:17: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   62 |   temp->current = NULL;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
1a3db1b
